update to summary and notes

--- a/classifying_yoga_poses.ipynb
+++ b/classifying_yoga_poses.ipynb
@@ -1334,7 +1334,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Error rates are pretty high."
+        "Error rates are pretty high. However, this is with the well-trained weights prevented from being modified. Let's unfreeze and try again. All weights from frozen layers of the model can then get updated from their pre-trained state according to loss function. \n",
+        "\n",
+        "However, we shoudl be careful as the models have already been pre-trained on huge sets of images and we need to take advantage of that. So we will get information from the plot above and use discriminative learning rates here(parameter max_lr), which maintains a low learning rate for initial layers as they need lesser tuning and gradually increase learning rate for later layers which need higher tuning especially fully connected ones."
       ]
     },
     {
@@ -1430,7 +1432,7 @@
         "colab_type": "text"
       },
       "source": [
-        "That is a very good classifier based on the work we have done so far.\n",
+        "That is a very good classifier based on the limited amount of work we have done so far. Most of the time was expended gathering and correctly labeling images of poses.\n",
         "\n",
         "We have only done a bit of basic cleaning up on the training images but there are still poor images in the training set as well as in the validation set. Also, there are not enough images to some of the classifications that are problematic - child/seated-forward-bend and plank/bridge. In the future, I could revisit those poses and source more sample images for training and validation.\n",
         "\n",
